--- a/preview/assets/scss/components/_cards.scss
+++ b/preview/assets/scss/components/_cards.scss
@@ -9,6 +9,10 @@
     }
   }
   .card-title {
+    color: #000;
+    border: 1px solid #cec6c6;
+    padding: 10px;
+    background-color: #d6d4d4;
     color: $black;
     margin-bottom: .75rem;
     text-transform: capitalize;
