--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -45,23 +45,28 @@
     }
   }
 }
-
+.card-title-style{
+  color: #000;
+    border: 1px solid #cec6c6;
+    padding: 10px;
+    background-color: #d6d4d4;
+}
 #visit-sale-chart-legend {
   ul {
     li {
       &:nth-child(1) {
         .legend-dots {
-          background: linear-gradient(to right, rgba(218, 140, 255, 1), rgba(154, 85, 255, 1));
+          background: blue;
         }
       }
       &:nth-child(2) {
         .legend-dots {
-          background: linear-gradient(to right, rgba(255, 191, 150, 1), rgba(254, 112, 150, 1));
+          background: blue;
         }
       }
       &:nth-child(3) {
         .legend-dots {
-          background:linear-gradient(to right, rgba(54, 215, 232, 1), rgba(177, 148, 250, 1))
+          background: blue;
         }
       }
     }
