--- a/src/assets/scss/_misc.scss
+++ b/src/assets/scss/_misc.scss
@@ -46,7 +46,7 @@ body {
 }
 
 .content-wrapper {
-  background: $content-bg;
+  background: #F7F7F7;
   padding: 2.75rem 2.25rem;
   width: 100%;
   @include flex-grow(1);
