--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -41,7 +41,7 @@ $colors: (
 
 
 $theme-colors: (
-  primary:         #b66dff,
+  primary:         #3f6ad8,
   secondary:       #d8d8d8,
   success:         #1bcfb4,
   info:            #198ae3,
