--- a/preview/assets/scss/_variables.scss
+++ b/preview/assets/scss/_variables.scss
@@ -66,7 +66,7 @@ $theme-gradient-colors: (
 ////////// COLOR SYSTEM //////////
 
 ////////// COLOR VARIABLES //////////
-$content-bg: #f2edf3;
+$content-bg: #F7F7F7;
 $footer-bg: $content-bg;
 $footer-color: color(dark);
 $border-color: #ebedf2;
