--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,27 +1,15 @@
 <nav class="sidebar sidebar-offcanvas" id="sidebar">
   <ul class="nav">
-    <li class="nav-item nav-profile">
-      <a href="javascript:;" class="nav-link">
-        <div class="nav-profile-image">
-          <img src="assets/images/faces/face1.jpg" alt="profile">
-          <span class="login-status online"></span> <!--change to offline or busy as needed-->              
-        </div>
-        <div class="nav-profile-text">
-          <span class="font-weight-bold mb-2">David Grey. H</span>
-          <span class="text-secondary text-small">Project Manager</span>
-        </div>
-        <i class="mdi mdi-bookmark-check text-success nav-profile-badge"></i>
-      </a>
-    </li>
-    <li class="nav-item" [ngClass]="{ 'active': dashboard.isActive }">
-      <a class="nav-link" routerLink="/dashboard" routerLinkActive #dashboard="routerLinkActive">
-        <span class="menu-title">Dashboard</span>
-        <i class="mdi mdi-home menu-icon"></i>
+    <li class="vsm-header">Estimations</li>
+    <li class="nav-item" [ngClass]="{ 'active': tables.isActive }">
+      <a class="nav-link" routerLink="tables/basic-table" routerLinkActive #tables="routerLinkActive">
+        <span class="menu-title">Estimation par parcelle</span>
+        <i class="mdi mdi-table-large menu-icon"></i>
       </a>
     </li>
     <li class="nav-item" [ngClass]="{'active' : accordions.isActive || buttons.isActive || badges.isActive || breadcrumbs.isActive || dropdowns.isActive || modals.isActive || notifications.isActive || progressbar.isActive || pagination.isActive || tabs.isActive || typography.isActive || tooltips.isActive }">
       <a class="nav-link" (click)="uiBasicCollapsed = !uiBasicCollapsed" [attr.aria-expanded]="uiBasicCollapsed" aria-controls="ui-basic">
-        <span class="menu-title">Basic UI Elements</span>
+        <span class="menu-title">Suivi de grossissement</span>
         <i class="menu-arrow"></i>
         <i class="mdi mdi-crosshairs-gps menu-icon"></i>
       </a>
@@ -44,31 +32,63 @@
     </li>
     <li class="nav-item" [ngClass]="{ 'active': forms.isActive }">
       <a class="nav-link" routerLink="forms/basic-elements" routerLinkActive #forms="routerLinkActive">
-        <span class="menu-title">Form elements</span>
+        <span class="menu-title">Profil de calibre</span>
         <i class="mdi mdi-format-list-bulleted menu-icon"></i>
       </a>
     </li>
     <li class="nav-item" [ngClass]="{ 'active': charts.isActive }">
       <a class="nav-link" routerLink="charts/chartjs" routerLinkActive #charts="routerLinkActive">
-        <span class="menu-title">Charts</span>
+        <span class="menu-title">Evolution de calibre</span>
         <i class="mdi mdi-chart-bar menu-icon"></i>
+      </a>
+    </li>
+    <li class="vsm-header">Récolte</li>
+    <li class="nav-item" [ngClass]="{ 'active': dashboard.isActive }">
+      <a class="nav-link" routerLink="/dashboard" routerLinkActive #dashboard="routerLinkActive">
+        <span class="menu-title">Déclaration de la récolte</span>
+        <i class="mdi mdi-home menu-icon"></i>
+      </a>
+   
+    </li>
+    <li class="nav-item" [ngClass]="{ 'active': icons.isActive }">
+      <a class="nav-link" routerLink="icons/mdi" routerLinkActive #icons="routerLinkActive">
+        <span class="menu-title">Entrée stock produit</span>
+        <i class="mdi mdi-contacts menu-icon"></i>
       </a>
     </li>
     <li class="nav-item" [ngClass]="{ 'active': tables.isActive }">
       <a class="nav-link" routerLink="tables/basic-table" routerLinkActive #tables="routerLinkActive">
-        <span class="menu-title">Tables</span>
+        <span class="menu-title">Expédition</span>
         <i class="mdi mdi-table-large menu-icon"></i>
       </a>
     </li>
     <li class="nav-item" [ngClass]="{ 'active': icons.isActive }">
       <a class="nav-link" routerLink="icons/mdi" routerLinkActive #icons="routerLinkActive">
-        <span class="menu-title">Icons</span>
+        <span class="menu-title">Bon de réception</span>
+        <i class="mdi mdi-contacts menu-icon"></i>
+      </a>
+    </li>
+    <li class="nav-item" [ngClass]="{ 'active': tables.isActive }">
+      <a class="nav-link" routerLink="tables/basic-table" routerLinkActive #tables="routerLinkActive">
+        <span class="menu-title">Bon de fabrication</span>
+        <i class="mdi mdi-table-large menu-icon"></i>
+      </a>
+    </li>
+    <li class="nav-item" [ngClass]="{ 'active': icons.isActive }">
+      <a class="nav-link" routerLink="icons/mdi" routerLinkActive #icons="routerLinkActive">
+        <span class="menu-title">Chiffre d'affaire</span>
+        <i class="mdi mdi-contacts menu-icon"></i>
+      </a>
+    </li>
+    <li class="nav-item" [ngClass]="{ 'active': icons.isActive }">
+      <a class="nav-link" routerLink="icons/mdi" routerLinkActive #icons="routerLinkActive">
+        <span class="menu-title">Chiffre d'affaire</span>
         <i class="mdi mdi-contacts menu-icon"></i>
       </a>
     </li>
     <li class="nav-item" [ngClass]="{ 'active' : blankPage.isActive || login.isActive || register.isActive || error404.isActive || error500.isActive }">
       <a class="nav-link" (click)="samplePagesCollapsed = !samplePagesCollapsed"  [attr.aria-expanded]="samplePagesCollapsed" aria-controls="auth">
-        <span class="menu-title">Sample Pages</span>
+        <span class="menu-title">Validation de la récolte</span>
         <i class="menu-arrow"></i>
         <i class="mdi mdi-medical-bag menu-icon"></i>
       </a>
@@ -81,6 +101,19 @@
           <li class="nav-item"> <a class="nav-link" routerLink="error-pages/500" routerLinkActive="active" #error500="routerLinkActive"> 500 </a></li>
         </ul>
       </div>
+    </li>
+    <li class="vsm-header">Suivi qualitatif </li>
+    <li class="nav-item" [ngClass]="{ 'active': tables.isActive }">
+      <a class="nav-link" routerLink="tables/basic-table" routerLinkActive #tables="routerLinkActive">
+        <span class="menu-title">Analyse qualitative</span>
+        <i class="mdi mdi-table-large menu-icon"></i>
+      </a>
+    </li>
+    <li class="nav-item" [ngClass]="{ 'active': icons.isActive }">
+      <a class="nav-link" routerLink="icons/mdi" routerLinkActive #icons="routerLinkActive">
+        <span class="menu-title">Agréage des fruits</span>
+        <i class="mdi mdi-contacts menu-icon"></i>
+      </a>
     </li>
   </ul>
 </nav>
