--- a/src/app/shared/sidebar/sidebar.component.scss
+++ b/src/app/shared/sidebar/sidebar.component.scss
@@ -1,10 +1,24 @@
 /* Sidebar */
 
 @import '../../../styles.scss';
+.vsm-header{
+  text-transform: uppercase;
+  font-size: .8rem;
+  margin: .75rem 0;
+  font-weight: bold;
+  color:#3f6ad8;
+  white-space: nowrap;
+  position: relative;
+  margin-left: 40px;
+}
 .sidebar {
   min-height: calc(100vh - #{$navbar-height});
   background: $sidebar-bg;
-  font-family: $type1-regular;
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+  font-size: .88rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #6c757d;
   padding: 0;
   width: $sidebar-width-lg;
   z-index: 11;
@@ -43,7 +57,7 @@
         cursor: pointer;
 
         i {
-          color: inherit;
+          color: #6c757d;
 
           &.menu-icon {
             font-size: $sidebar-icon-font-size;
@@ -72,7 +86,7 @@
             &:before{
               content: "\f0141";
               font-size: inherit;
-              color: inherit;
+              color: #6c757d;
             }
             + .menu-icon {
               margin-left: .25rem;
@@ -86,7 +100,7 @@
         }
 
         .menu-title {
-          color: inherit;
+          color: #6c757d;
           display: inline-block;
           font-size: $sidebar-menu-font-size;
           line-height: 1;
