--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -3,7 +3,7 @@
   width: 100%;
 }
 .footer {
-  background: $footer-bg;
+  background: #F7F7F7;
   color: $footer-color;
   padding: 20px 1rem;
   transition: all $action-transition-duration $action-transition-timing-function;
