--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,6 +1,5 @@
 <footer class="footer">
   <div class="d-sm-flex justify-content-center justify-content-sm-between py-2">
-    <span class="text-muted text-center text-sm-left d-block d-sm-inline-block">Copyright © bootstrapdash.com 2020</span>
-    <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center">Free <a href="https://www.bootstrapdash.com/angular-admin-templates/" target="_blank">  angular admin template </a> from <a href="https://www.bootstrapdash.com/" target="_blank">bootstrapdash.com </a></span>
+    <span class="text-muted text-center text-sm-left d-block d-sm-inline-block">BEE ONE, Inc. © Copyright {{currentYear}} - <a href="http://agridata-consulting.com/" target="_blank">Agridata-Consulting</a> - All rights reserved.</span>
   </div>
 </footer>
