--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar default-layout-navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
   <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
-    <a class="navbar-brand" routerLink="/"><img src="assets/images/beeonelogo.png" alt="logo" /></a>
+    <a class="navbar-brand" href="http://agridata.hopto.org:3001/"><img src="assets/images/beeonelogo.png" alt="logo" /></a>
   </div>
   <div class="navbar-menu-wrapper d-flex align-items-stretch">
     <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize" (click)="toggleSidebar()">
@@ -36,6 +36,41 @@
           <a class="dropdown-item" href="javascript:;">
             <i class="mdi mdi-logout mr-2 text-primary"></i>
             Signout
+          </a>
+        </div>
+      </li>
+      <li class="nav-item dropdown" ngbDropdown>
+        <a class="nav-link count-indicator dropdown-toggle" id="messageDropdown" ngbDropdownToggle>
+          <i class="mdi mdi mdi-laptop"></i>
+        </a>
+        <div class="dropdown-menu dropdown-menu-right navbar-dropdown preview-list" ngbDropdownMenu aria-labelledby="messageDropdown">
+          <h6 class="p-3 mb-0">Langues</h6>
+          <div class="dropdown-divider"></div>
+          <a (click)="changeLanguage('fr')" class="dropdown-item preview-item">
+            <div class="preview-thumbnail">
+              <img src="assets/images/flags/fr.png" alt="image" class="profile-pic">
+            </div>
+            <div class="preview-item-content d-flex align-items-start flex-column justify-content-center">
+              <h6 class="preview-subject ellipsis mb-1 font-weight-normal">France</h6>
+            </div>
+          </a>
+          <div class="dropdown-divider"></div>
+          <a (click)="changeLanguage('en')" class="dropdown-item preview-item">
+            <div class="preview-thumbnail">
+              <img src="assets/images/flags/en.png" alt="image" class="profile-pic">
+            </div>
+            <div class="preview-item-content d-flex align-items-start flex-column justify-content-center">
+              <h6 class="preview-subject ellipsis mb-1 font-weight-normal">English</h6>
+            </div>
+          </a>
+          <div class="dropdown-divider"></div>
+          <a (click)="changeLanguage('ar')" class="dropdown-item preview-item">
+            <div class="preview-thumbnail">
+              <img src="assets/images/flags/ar_ma.png" alt="image" class="profile-pic">
+            </div>
+            <div class="preview-item-content d-flex align-items-start flex-column justify-content-center">
+              <h6 class="preview-subject ellipsis mb-1 font-weight-normal">العربية</h6>
+            </div>
           </a>
         </div>
       </li>
@@ -139,6 +174,8 @@
           <h6 class="p-3 mb-0 text-center">See all notifications</h6>
         </div>
       </li>
+           
+ 
       <li class="nav-item nav-logout d-none d-lg-block">
         <a class="nav-link" href="javascript:;">
           <i class="mdi mdi-power"></i>
