--- a/src/app/shared/sidebar/sidebar.component.scss
+++ b/src/app/shared/sidebar/sidebar.component.scss
@@ -204,7 +204,7 @@
         padding: 0;
         .nav-link {
           color: $sidebar-submenu-color;
-          padding: $sidebar-submenu-item-padding;
+          padding: 0.75rem 0.75rem 0.75rem 0.75rem !important;
           position: relative;
           font-size: $sidebar-submenu-font-size;
           line-height: 1;
@@ -252,7 +252,7 @@
         margin-left: 0;
         margin-right: 0;
         .nav-item {
-          padding: 0 1rem;
+          padding: 0 0rem;
           position: relative;
           .nav-link {
             display: block;
@@ -350,7 +350,7 @@
           .nav-item {
             .nav-link {
               text-align: left;
-              padding-left: 20px;
+              padding-left: 0px;
             }
           }
         }
